<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/number_back"
        android:gravity="center"
        android:hint="@string/type_here"
        android:inputType="number"
        android:maxLength="15"
        android:minWidth="100dp"
        android:textSize="40sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_fact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_back"
        android:paddingHorizontal="12dp"
        android:text="@string/search_number"
        android:textColor="@color/yellow" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_random_fact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_back"
        android:paddingHorizontal="12dp"
        android:text="@string/search_random_number"
        android:textColor="@color/yellow" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/gray_line" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_history_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:text="@string/history_title"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="10dp" />

</LinearLayout>